# deszo_english_app_stanza_annotator

./: .gitignore  LICENSE  README.md  StanzaAnnotatorSpec.v  pyproject.toml
docs/: architecture.en.md  architecture.md  stanza_annotator_architecture.md
docs/architecture/: stanza_annotator_architecture.md
docs/architecture/schema/: stanza_annotator.v2.0.schema.json  stanza_annotator_config.v2.0.schema.json  stanza_annotator_diagnostics.v2.0.schema.json  stanza_annotator_errors.v2.0.json
docs/architecture/schema/upstream/: epub_content_extractor.v3.0.required-subset.schema.json
docs/guidelines/: cli_transform_guidelines.md  coq_program_modules_guidelines.md  python_module_guidelines.md  python_module_standarts.md  runtime_metadata_guideline.md
docs/testing/: stanza_annotator_testing.md
docs/testing/fixtures/adapter/: minimal_raw_stanza_document.json
docs/testing/fixtures/config/: custom_front_matter_section_text.json  custom_selects_nothing.json  invalid_batch_size_zero.json  invalid_unknown_field.json  max_text_unit_chars_10.json
docs/testing/fixtures/expected/: custom_front_matter_section_text_output.normalized.json  empty_chapter_text_skipped_output.normalized.json  limit_boundary_10_exact_output.normalized.json  limit_boundary_10_over_skipped_output.normalized.json  minimal_failed_invalid_config.normalized.json  minimal_failed_unsupported_upstream.normalized.json  minimal_failed_upstream_failed.normalized.json  minimal_success_output.normalized.json
docs/testing/fixtures/input/: complex_batch_epub_result.json  empty_chapter_text_epub_result.json  future_upstream_schema_epub_result.json  limit_boundary_10_exact_epub_result.json  limit_boundary_10_over_epub_result.json  minimal_success_epub_result.json  sensitive_strings_epub_result.json  unsupported_upstream_schema.json  upstream_failed_result.json
docs/testing/fixtures/input/invalid/: chapter_paragraphs.invalid.json
stanza_annotator/: __init__.py  __main__.py  annotator.py  cli.py  config.py  converter.py  errors.py  models.py  runtime_metadata.py
stanza_annotator/_internal/: __init__.py  stanza_adapter.py  types.py  validation.py
tests/: test_annotator.py  test_cli.py  test_converter.py  test_runtime_metadata.py  test_stanza_adapter.py
