[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stanza-annotator"
version = "0.1.0"
description = "A Stanza-based linguistic annotation module for prepared English text."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Deszo English App" }
]
dependencies = [
  "pydantic>=2.7,<3",
  "stanza>=1.8,<2"
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9"
]

[project.scripts]
stanza-annotate = "stanza_annotator.cli:main"

[tool.setuptools.packages.find]
include = ["stanza_annotator*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
