[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stanza-annotator"
version = "0.1.0"
description = "A Stanza-based linguistic annotation module for prepared English text."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Deszo English App" }
]
dependencies = [
  "pydantic>=2.7,<3",
  "stanza>=1.8,<2"
]

[project.optional-dependencies]
dev = [
  "black>=24,<26",
  "mypy>=1.10,<2",
  "pytest>=8,<9",
  "ruff>=0.5,<1"
]

[project.scripts]
stanza-annotate = "stanza_annotator.cli:main"

[tool.setuptools.packages.find]
include = ["stanza_annotator*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["stanza", "torch"]
ignore_missing_imports = true
